--- a/css/grid.css
+++ b/css/grid.css
@@ -36,3 +36,26 @@ footer{
   grid-column: 1/-1;
   grid-row: 4/6;
 }
+
+@media only screen and (max-width: 850px){
+
+  nav{
+    grid-column: 1/3;
+    grid-row:1/4;
+  }
+
+  section{
+    grid-column: 3/10;
+    grid-row: 3/4;
+  }
+
+  aside{
+grid-column: 10/-1;
+grid-row: 2/4
+  }
+
+  footer{
+    grid-column: 1/-1;
+    grid-row: 4/6;
+  }
+}
