--- a/css/grid.css
+++ b/css/grid.css
@@ -100,3 +100,12 @@ grid-row: 2/4
     grid-row: 4/6;
   }
 }
+  @media only screen and (max-width: 500px){
+
+    nav{
+      grid-column: 1/2;
+      grid-row: 2/3;
+    }
+
+    
+  }
