--- a/css/grid.css
+++ b/css/grid.css
@@ -90,10 +90,7 @@ grid-row: 2/4
     grid-row:3/4;
   }
 
-  .eljo{
-    grid-column: 10/-1;
-    grid-row: 2/3;
-  }
+
 
   footer{
     grid-column: 1/-1;
@@ -107,5 +104,14 @@ grid-row: 2/4
       grid-row: 2/3;
     }
 
-    
+    .eljo{
+      grid-column: 10/-1;
+      grid-row: 3/4;
+    }
+
+    .strumpor{
+      grid-column: 10/-1;
+      grid-row: 3/4;
+    }
+
   }
