--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,11 @@ body
 
 
 header{
-  border-color: rgb(146, 231, 111);
-    border: 2px;
+    border: 2px rgb(146, 231, 111);
 }
 
 nav{
-border-color: rgb(146, 231, 111) ;
-border: 2px ;
+border: 2px rgb(146, 231, 111);
 }
 
 /*style float border list*/
@@ -38,8 +36,8 @@ display: inline-block;
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color:#a88ae7;
-  min-width: 300px;
+  background-color:rgb(146, 231, 111);
+  min-width: 400px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
@@ -56,7 +54,7 @@ display: inline-block;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color:#b6d2a3}
+.dropdown-content a:hover {background-color:white}
 
 
 
@@ -72,9 +70,8 @@ img{  display: block;
 }
 
 section{
-border-color: rgb(146, 231, 111);
 margin: 10px;
-  border: 2px;
+  border: 2px rgb(146, 231, 111);
 }
 
 h1{
@@ -88,8 +85,8 @@ h2{
 }
 
 aside{
-  border-color: rgb(146, 231, 111);
-    border: 2px;
+
+    border: 2px rgb(146, 231, 111);
 margin: 10px;
 }
 
@@ -111,8 +108,8 @@ margin: 10px;
 
 
 footer{
-  border-color:rgb(146, 231, 111);
-  border: 2px;
+
+  border: 2px rgb(146, 231, 111);
 
 }
 
