--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,9 @@ border: 2px rgb(146, 231, 111);
   margin-bottom: 10px;
 }
 
+.linav a:hover {background-color:rgb(146, 231, 111)}
+
+
 .dropdown{
   position: relative;
 display: inline-block;
