--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,14 @@ body
 
 
 header{
-    border: 2px rgb(146, 231, 111);
+    border: 2px solid;
+    border-color: rgb(146, 231, 111);
 }
 
 nav{
-border: 2px rgb(146, 231, 111);
+
+border: 2px solid;
+border-color: rgb(146, 231, 111);
 }
 
 /*style float border list*/
@@ -74,7 +77,8 @@ img{  display: block;
 
 section{
 margin: 10px;
-  border: 2px rgb(146, 231, 111);
+border: 2px solid;
+border-color: rgb(146, 231, 111);
 }
 
 h1{
@@ -88,8 +92,8 @@ h2{
 }
 
 aside{
-
-    border: 2px rgb(146, 231, 111);
+border-color: rgb(146, 231, 111);
+    border: 2px solid;
 margin: 10px;
 }
 
@@ -111,8 +115,8 @@ margin: 10px;
 
 
 footer{
-
-  border: 2px rgb(146, 231, 111);
+border-color: rgb(146, 231, 111);
+border: 2px solid;
 
 }
 
