--- a/css/grid.css
+++ b/css/grid.css
@@ -31,21 +31,25 @@ aside{
   grid-row: 3/5;
 }
 
+/* specifikation för vart bilden strumpor finns*/
 .strumpor{
   grid-column: 8/10;
   grid-row: 3/5;
 }
 
+/* specifikation för vart bilden kettel finns*/
 .kettel{
   grid-column: 10/-1;
   grid-row: 3/5;
 }
 
+/* specifikation för vart bilden ring finns*/
 .ring{
   grid-column: 8/10;
   grid-row: 3/5;
 }
 
+/* specifikation för vart bilden eljo finns*/
 .eljo{
   grid-column: 10/-1;
   grid-row: 3/5;
@@ -57,58 +61,70 @@ footer{
   grid-row: 5/6;
 }
 
+/* specifikationer vart saker finns när skärmen är under 800px*/
 @media only screen and (max-width: 800px){
 
+/* specifikation för vart nav finns under 800px*/
   nav{
     grid-column: 1/2;
     grid-row:1/3;
   }
 
+/*specifikation för vart section finnsunder 800px*/
   section{
     grid-column: 3/10;
     grid-row: 2/5;
   }
 
+/*specifikation för vart aside finns under 800px*/
   aside{
 grid-column: 10/-1;
 grid-row: 2/5;
   }
 
+/* specifikation för vart bilden kettel finns under 800px*/
   .kettel{
   grid-column: 10/-1;
   grid-row:3/5;
 
   }
 
+/* specifikation för vart bilden strumpor finns under 800px*/
   .strumpor{
     grid-column: 10/-1;
     grid-row: 2/3;
   }
 
+/* specifikation för vart bilden ring finns under 800px*/
   .ring{
     grid-column: 10/-1;
     grid-row:3/5;
   }
 
 
-
+/* specifikation vart footer finns under 800px*/
   footer{
     grid-column: 1/-1;
     grid-row: 5/6;
   }
 }
+
+/* specifikationer vart saker finns när skärmen är under 500px*/
   @media only screen and (max-width: 500px){
 
+/* specifikation för vart nav finns under 600px*/
     nav{
       grid-column: 1/2;
       grid-row: 2/3;
     }
 
+/* specifikation för vart bilden eljo finns under 500px*/
     .eljo{
       grid-column: 10/-1;
       grid-row: 4/5;
     }
 
+/* specifikation för vart bilden strumpor finns under 500px*/
     .strumpor{
       grid-column: 10/-1;
       grid-row: 4/5;
